--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "client",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://yourusername.github.io/Krypto-Deploy",
+  "homepage": "https://aaryan-gautam.github.io/Krypto-Deploy",
   "type": "module",
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist",
+    "deploy": "gh-pages -d build",
     "dev": "vite",
-    "build": "vite build && cp public/.nojekyll dist/",
+    "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
