--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "client",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://yourusername.github.io/Krypto-Deploy",
+  "homepage": "https://aaryan-gautam.github.io/Krypto-Deploy",
   "type": "module",
   "scripts": {
     "predeploy": "npm run build",
